Add new dataset from configuration page, closes #22
