# server/dataset.py
@@ -1,0 +1,5 @@
+import database
+
+
+def post_dataset(body):
+    database.add_testdata_to_db(body)
